<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add"
        android:title="@string/add_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_shipment_arrival"
        android:title="@string/shipment_arrival"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/insert_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>