<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrismacholtz.inventoryapp.MainActivity">

    <HorizontalScrollView
        android:id="@+id/category_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menu_item0"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_all" />

            <TextView
                android:id="@+id/menu_item1"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category1" />

            <TextView
                android:id="@+id/menu_item2"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category2" />

            <TextView
                android:id="@+id/menu_item3"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category3" />

            <TextView
                android:id="@+id/menu_item4"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category4" />
        </LinearLayout>
    </HorizontalScrollView>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_bar"></ListView>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Nothing left in inventory"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_search_white_24dp" />

</RelativeLayout>
