<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/category_bar_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:scrollbars="none">

            <TextView
                android:id="@+id/menu_item0_sales"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_all" />

            <TextView
                android:id="@+id/menu_item1_sales"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category1" />

            <TextView
                android:id="@+id/menu_item2_sales"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category2" />

            <TextView
                android:id="@+id/menu_item3_sales"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category3" />

            <TextView
                android:id="@+id/menu_item4_sales"
                style="@style/menuItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category4" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/category_bar_sales"
        android:orientation="vertical">

        <ListView
            android:id="@+id/list_view_sales"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        </ListView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/detailHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:text="@string/sales" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sales_product_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:paddingLeft="32dp"
                    android:paddingTop="8dp"
                    tools:text="Wii u\nNintendo Switch" />

                <TextView
                    android:id="@+id/sales_total"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="8dp"
                    tools:text="$750.00\n$750.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buy_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/buy" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sales_tax"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        tools:text="Tax 8.1% = 123.45" />

                    <TextView
                        android:id="@+id/sales_grand_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        tools:text="Total:  $456.32" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_view_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_view_string"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

</RelativeLayout>

